// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SinglyLinkedList #remove should remove a node at a given index 1`] = `
SinglyLinkedList {
  "head": Node {
    "next": Node {
      "next": null,
      "val": "Beautiful",
    },
    "val": "Hello",
  },
  "length": 2,
  "tail": Node {
    "next": null,
    "val": "Beautiful",
  },
}
`;

exports[`SinglyLinkedList #unshift should add a node at the beginning and return the list 1`] = `
SinglyLinkedList {
  "head": Node {
    "next": Node {
      "next": null,
      "val": "Hello",
    },
    "val": "World",
  },
  "length": 2,
  "tail": Node {
    "next": null,
    "val": "Hello",
  },
}
`;
